fix front page spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -309,6 +309,7 @@ width: 100%
 
 .glyphicon-tags {
   margin-right: 7px;
+  color: #5cb85c;
   span{
     background-color: lightgray;
   }
@@ -337,7 +338,7 @@ width: 100%
   }
 }
 
-.text-area {
+.text-area1 {
   box-sizing: border-box; /* fit parent width */
   width: 100%;
   height: 70%;
@@ -346,6 +347,6 @@ width: 100%
 
 .update-note-button {
   position: absolute;
-  bottom: 20px;
+  bottom: 30px;
   right: 20px;
 }
